# web_homework_02

./: .gitignore  Dockerfile  README.md  UML diagram.drawio  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/pymakers/: bot.py  sort_dir.py
tests/: notes_test.py  sort_dir_test.py
