[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[project]
name="project_pymakers"
version="0.0.3"
authors=[
    {name = "group_3", email = "pavlovska.dasha@gmail.com"},
]
description="personal assistant"
readme ="README.md"
requires-python = ">=3.7"
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

[project.scripts]
pymakers = "pymakers:bot.main"



